    7 July 2013
Checked that Unicode tables u2l and l2u are in agreement with latest 
UnicodeData.txt (08-Aug-2012 13:06).

    2 July 2013
fil$: Switching from input to output back to input did not work if the second
input only had one argument - the input's file name.

   14 May 2013
Added a field "dontcloseme" to filehendel struct. It is set to TRUE if the
file is opened using get$ and ensures that such a file isn't closed if
fil$(,filename,r) fails and Bracmat tries to free a filehandle. Made sure that
code can be compiled with NO_FOPEN defined.

    6 May 2013
Found bug in input that melted the tree Δ A into a single atom ΔA.
Other example:  (ø l:% %)  failed.

    25 March 2013
Friendlier error reporting when parentheses don't balance.

    21 March 2013
In xml.c, the space after !DOCTYPE disappeared. The error was sometimes
negated by another error because doctypei was not properly reset to 0.
Renamed putLeaveChar to putLeafChar.

     1 February 2013
Two ínstead of three parameters for preparefp if not compiled with debug info.

    26 December 2012
Several small improvements to fil()

    25 December 2012
Debugged preparefp.

    23 December 2012
Removed a superfluous while loop in someopt. Superfluous, because all arguments
to fil$ must be atomic and in a right descending structure.

    20 December 2012
Cut most of is_afhankelyk_van away as obsolete.

    10 December 2012
Replaced 2000000000 by HEADROOM * RADIX2, which is valid for both 32 and 64 bit.
scompare: if subject is zero bytes long and therefore not a number, adding
characters to it may make it a number.

     6 December 2012
Thoroughly tested lambda.

     5 December 2012
Compiled with Borland C++ 5.02, alternative typedef for UINT32, found unused
global var hekje1.

     4 December 2012
Commented out unreachable code in evalmacro

     2 December 2012
Made type 'int' explicit in line 5223
 
     1 December 2012
Solved bug with late binding that turned up when evaluating 